--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="false">
+        android:supportsRtl="false"
+        android:theme="@style/NoActionBar">
         <activity
             android:name=".SplashActivity"
             android:exported="true"
