--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,7 @@
 name: Android CI
 
 on:
+  push:
   repository_dispatch:
   workflow_dispatch:
 
@@ -26,6 +27,15 @@ jobs:
  
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Check updates
+        run: ./gradlew update
+
+      - name: Config git
+        run: git config user.name ohyooo && git config user.mail i@ohyooo.com
+
+      - name: Push changes
+        run: git add . && git commit -m "update libs" && git push
 
       - name: Build APK
         run: ./gradlew assembleRelease
