--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,7 +35,7 @@ jobs:
         run: git config user.name ohyooo && git config user.mail i@ohyooo.com
 
       - name: Push changes
-        run: git add . && git commit -m "update libs" && git push
+        run: git add . && git commit -m "update libs" && git push || true
 
       - name: Build APK
         run: ./gradlew assembleRelease
