--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 android.databinding.incremental=true
 android.enableJetifier=true
+android.enableR8.fullMode=true
 android.useAndroidX=true
 kapt.incremental.apt=true
 kapt.use.worker.api=true
