--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ kapt.incremental.apt=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options="-Xmx2048M" -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options="-Xmx2048M" -XX:+UseG1GC
 org.gradle.parallel=true
 org.gradle.parallel.threads=12
 org.gradle.vfs.watch=true
