--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,7 +27,7 @@ jobs:
  
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
+ 
       - name: Check updates
         run: ./gradlew update
 
@@ -47,10 +47,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.time.outputs.time }}
-          release_name: Calendar Release ${{ steps.time.outputs.time }}
+          release_name: QRScan Release ${{ steps.time.outputs.time }}
           draft: false
           prerelease: false
-     
+
       - name: Generate release tag
         id: tag
         run: |
@@ -60,7 +60,7 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           files: "app/build/outputs/apk/release/*.apk"
-
+ 
       - name: Remove old Releases
         uses: dev-drprasad/delete-older-releases@v0.2.0
         env:
@@ -73,4 +73,3 @@ jobs:
         uses: GitRML/delete-workflow-runs@main
         with:
           retain_days: 10
-          keep_minimum_runs: 2
