--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 android.databinding.incremental=true
-android.enableJetifier=true
+android.enableJetifier=false
 android.enableR8.fullMode=true
 android.useAndroidX=true
 kapt.incremental.apt=true
@@ -9,4 +9,5 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options="-Xmx2048M" -XX:+UseG1GC
 org.gradle.parallel=true
 org.gradle.parallel.threads=12
+org.gradle.unsafe.configuration-cache=true
 org.gradle.vfs.watch=true
