--- a/benchmark/src/main/AndroidManifest.xml
+++ b/benchmark/src/main/AndroidManifest.xml
@@ -2,6 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <queries>
-        <package android:name="com.ohyooo.qrscan" />
+        <package android:name="com.ohyooo.calendar" />
     </queries>
 </manifest>
