--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 29 21:16:42 CST 2022
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
+#Sun Apr 16 10:10:31 CST 2023
+sdk.dir=E\:\\Documents\\Android
