--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/android
-# Edit at https://www.toptal.com/developers/gitignore?templates=android
+# Created by https://www.gitignore.io/api/androidstudio
+# Edit at https://www.gitignore.io/?templates=androidstudio
 
-### Android ###
+### AndroidStudio ###
+# Covers files to be ignored for android development using Android Studio.
+
 # Built application files
 *.apk
 *.aar
 *.ap_
-*.aab
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -19,12 +20,14 @@
 bin/
 gen/
 out/
-#  Uncomment the following line in case you need and you don't have the release build type files in your app
-# release/
 
 # Gradle files
+.gradle
 .gradle/
 build/
+
+# Signing files
+.signing/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -35,57 +38,86 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
+# Android Studio
+/*/build/
+/*/release/
+/*/debug/
+/*/stage/
+/*/dev/
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
 captures/
+.navigation/
+*.ipr
+*~
+*.swp
 
-# IntelliJ
-*.iml
-.idea/
-
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+# Android Patch
+gen-external-apklibs
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
-.cxx/
 
-# Google Services (e.g. APIs or Firebase)
-# google-services.json
+# NDK
+obj/
 
-# Freeline
-freeline.py
-freeline/
-freeline_project_description.json
+# IntelliJ IDEA
+*.iml
+*.iws
+/out/
 
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
+# User-specific configurations
+.idea/
 
-# Version control
-vcs.xml
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-# lint/reports/
+# Legacy Eclipse project files
+.classpath
+.project
+.cproject
+.settings/
 
-### Android Patch ###
-gen-external-apklibs
-output.json
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Replacement of .externalNativeBuild directories introduced
-# with Android Studio 3.5.
+# Package Files #
+*.war
+*.ear
 
-# End of https://www.toptal.com/developers/gitignore/api/android
+# virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
+hs_err_pid*
+
+## Plugin-specific files:
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+### AndroidStudio Patch ###
+
+!/gradle/wrapper/gradle-wrapper.jar
+
+# End of https://www.gitignore.io/api/androidstudio
 
 screenshots
+
+*/karma*
+*/webpack*
+kotlin-js-store
