--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,17 @@
+kotlin.code.style=official
+kotlin.mpp.androidSourceSetLayoutVersion=2
 android.databinding.incremental=true
-android.enableJetifier=false
 android.enableR8.fullMode=true
+android.nonTransitiveRClass=true
 android.useAndroidX=true
+#
+kapt.include.compile.classpath=false
 kapt.incremental.apt=true
+kapt.use.worker.api=true
+#
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options="-Xmx2048M" -XX:+UseG1GC
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m -XX:+UseG1GC
 org.gradle.parallel.threads=12
-org.gradle.unsafe.configuration-cache=true
-org.gradle.vfs.watch=true
+org.gradle.parallel=true
