--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048m -XX:+UseG1GC
 org.gradle.parallel.threads=12
 org.gradle.parallel=true
+#
+org.jetbrains.compose.experimental.uikit.enabled=true
