--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.4.1"
 androidx-core-ktx = "androidx.core:core-ktx:1.10.1"
 androidx-activity = "androidx.activity:activity:1.7.2"
 androidx-compose-activity = "androidx.activity:activity-compose:1.8.0"
+startup-runtime = "androidx.startup:startup-runtime:1.1.1"
 
 # Compose
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose_compiler" }
