--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,34 +37,34 @@ jobs:
       - name: Build APK
         run: ./gradlew assembleRelease
      
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.time.outputs.time }}
-          release_name: Calendar Release ${{ steps.time.outputs.time }}
-          draft: false
-          prerelease: false
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ steps.time.outputs.time }}
+      #     release_name: Calendar Release ${{ steps.time.outputs.time }}
+      #     draft: false
+      #     prerelease: false
 
-      - name: Generate release tag
-        id: tag
-        run: |
-          echo "::set-output name=release_tag::$(date +"%Y.%m.%d_%H-%M")"
-      - name: Upload Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ steps.tag.outputs.release_tag }}
-          files: "app/build/outputs/apk/release/*.apk"
+      # - name: Generate release tag
+      #   id: tag
+      #   run: |
+      #     echo "::set-output name=release_tag::$(date +"%Y.%m.%d_%H-%M")"
+      # - name: Upload Release
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     tag_name: ${{ steps.tag.outputs.release_tag }}
+      #     files: "app/build/outputs/apk/release/*.apk"
  
-      - name: Remove old Releases
-        uses: dev-drprasad/delete-older-releases@v0.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          keep_latest: 5
-          delete_tags: true
+      # - name: Remove old Releases
+      #   uses: dev-drprasad/delete-older-releases@v0.2.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     keep_latest: 5
+      #     delete_tags: true
 
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
