--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ kapt.use.worker.api=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048m -XX:+UseG1GC
-org.gradle.parallel.threads=12
+org.gradle.jvmargs=-Xms1g -Xmx2g -XX:+UseZGC -XX:+ZGenerational
+org.gradle.parallel.threads=16
 org.gradle.parallel=true
 #
 org.jetbrains.compose.experimental.uikit.enabled=true
