--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,13 @@ compile_sdk = "36"
 version_code = "10"
 version_name = "2.10"
 
-agp = "8.13.0"
+agp = "8.13.2"
 kotlin = "2.3.0"
 
 
 [plugins]
 agp = { id = "com.android.application", version.ref = "agp" }
-alp = { id = "com.android.library", version.ref = "agp" }
+alp = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 kgp = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ks = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kmm = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
