--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,8 @@ org.gradle.parallel.threads=4
 org.gradle.parallel=true
 #
 org.jetbrains.compose.experimental.uikit.enabled=true
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.builtInKotlin=true
+org.gradle.configuration-cache=true
